--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "devDependencies": {
     "angular-mocks": "^1.4.9",
     "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-jade": "^1.1.0",
+    "gulp-ng-html2js": "^0.2.1",
+    "gulp-rename": "^1.2.2",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.19",
     "karma-jasmine": "^0.3.6",
