--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-jade": "^1.1.0",
+    "gulp-less": "^3.0.5",
     "gulp-ng-html2js": "^0.2.1",
     "gulp-rename": "^1.2.2",
     "jasmine-core": "^2.4.1",
