--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "phantomjs": "^2.1.2"
   },
   "dependencies": {
-    "angular": "^1.4.9"
+    "angular": "^1.4.9",
+    "angular-messages": "^1.4.9"
   }
 }
